# semantic-code-search

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  USAGE.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
demo/: README.md  demo.tape  setup_demo.sh
docs/: ROADMAP.md
eval/: README.md  __init__.py  ablation.py  answerability.py  ci_smoke.py  dataset.jsonl  dataset_gitea.jsonl  judge.py  metrics.py  retrieval_eval.py
observability/: README.md  grafana-dashboard.json  prometheus.yml
src/semantic_index/: __init__.py  chunker.py  chunker_ast.py  cli.py  config.py  embedder.py  indexer.py  llm.py  mcp_server.py  metrics.py  rag.py  reranker.py  search.py  state.py  store.py
tests/: test_ablation.py  test_answerability.py  test_chunker.py  test_chunker_ast.py  test_citations.py  test_eval_metrics.py  test_fallback.py  test_metrics.py  test_reranker.py  test_state.py
