[project]
name = "semantic-code-search"
version = "0.1.0"
description = "Self-hosted, zero-cost semantic code search + RAG index with an MCP server."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Niraj Chaudhari" }]
dependencies = [
    "qdrant-client>=1.9",
    "fastembed>=0.3",
    "typer>=0.12",
    "mcp>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
semantic-index = "semantic_index.cli:app"
semantic-index-mcp = "semantic_index.mcp_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
